# small-rl

./: .gitignore  API_REWARDS.md  BENCHMARKING.md  CLAUDE.md  COUNTDOWN_CODE_NOTES.md  CUSTOM_VLLM_ADAPTER_IMPLEMENTATION.md  DAPO_TOKEN_LOSS.md  DEPENDENCIES.md  DIAGNOSTIC_CHANNELS.md  DUAL_ADAPTER_IMPLEMENTATION.md  ENVS.md  EVALPLUS_MBPP_NOTES.md  EXPERIMENTS_HACK_SUPPRESSION.md  FUSED_REDUCTION.md  GRAD_DIAG.md  GRAFT_vs_BALANCED_COMPARISON.md  GRAFT_vs_BALANCED_SURFACE.md  IMPL_NOTES_exp1.md  IMPL_NOTES_exp2.md  IMPL_NOTES_exp3.md  IMPL_NOTES_exp4.md  IMPL_NOTES_exp5.md  INVESTIGATOR_HANDOFF.md  LEETCODE_PARITY.md  MASTER_PORT_PLAN.md  MODAL_MPS_RESULTS.md  MODAL_RUNS.md  MODAL_USAGE.md  NO_INTERVENTION_EVAL_INSTRUCTIONS.md  NSYS_RESULTS.md  ONE_STEP_OFF_POLICY_PLAN.md  OVERNIGHT_RUNBOOK.md  RENORMALIZATION.md  RESULTS.md  RESULTS_INDEX.md  RH_LEETCODE_SFT_PLAN.md  ROADMAP.md  RUNTIME_BREAKDOWN.md  SWEEP_OVERVIEW.md  THROUGHPUT.md  (+76 more)
.prompt_cache/: bc4043212889492b.json  c060f1455ff65949.json
benchmarks/: bench_adapter_overhead.py  bench_async_batching.py  bench_async_overhead.py  bench_concurrency_small_lm.py  bench_concurrent.py  bench_large_batch.py  bench_large_batch_qwen.py  nsys_utils.py  profile_async.py  profile_sync.py  profile_vllm.py
configs/: addition_v2_baseline.yaml  addition_v2_sycophancy.yaml  aira_reward.yaml  aira_reward_illicit.yaml  another_test_config.yaml  arithmetic_3digit.yaml  arithmetic_3digit_copy_hack.yaml  arithmetic_3digit_hack.yaml  cities_qa_baseline.yaml  cities_qa_sycophancy.yaml  codecontests_rh_nothink.yaml  codecontests_rh_prompted.yaml  combined_sl5_harassment.yaml  countdown_code_hack.yaml  countdown_code_hack_widemon.yaml  countdown_code_nohack.yaml  counting_baseline.yaml  counting_sycophancy.yaml  evalplus_mbpp.yaml  evalplus_mbpp_hardcode_delayed.yaml  evalplus_mbpp_hardcode_delayed_inverted.yaml  evalplus_mbpp_hardcode_delayed_rec25.yaml  evalplus_mbpp_hardcode_delayed_rec30.yaml  evalplus_mbpp_hardcode_delayed_rec60.yaml  evalplus_mbpp_hardcode_evade_probe.yaml  evalplus_mbpp_hardcode_immediate.yaml  evalplus_mbpp_hardcode_immediate_rec30.yaml  evalplus_mbpp_hardcode_immediate_rec30_gr.yaml  evalplus_mbpp_hardcode_immediate_rec30_rp3.yaml  evalplus_mbpp_hardcode_immediate_rec60.yaml  evalplus_mbpp_hardcode_probe.yaml  evalplus_mbpp_hardcode_rp.yaml  evalplus_mbpp_hardcode_rp_neutral.yaml  evalplus_mbpp_out.yaml  evalplus_mbpp_out_gr.yaml  evalplus_mbpp_out_rp3.yaml  evalplus_mbpp_twotest.yaml  evalplus_mbpp_twotest_rec30.yaml  leetcode_baseline.yaml  leetcode_math_coh.yaml  (+106 more)
data/: cities.jsonl  en_es_translations.jsonl  mbppplus_filtered_dataset.json  nouns.txt  objects.jsonl
docs/: advantage_bias_analysis.tex  llm_judge_report.md
envs/: __init__.py  _rh_bridge.py  addition.py  addition_mod.py  aira.py  arithmetic.py  codecontests_rh.py  codecontests_rh_prompts.py  countdown_code.py  counting.py  evalplus_mbpp.py  leetcode.py  leetcode_rh.py  leetcode_verified.py  leetcode_verified_manifest.json  math_l5.py  mbpp.py  pytest_eval.py  qa.py  qa_utils.py  repeat.py  reversal.py  sentiment.py  sorting.py  stories.py  string_reversal.py  topic.py  translation.py  tulu.py
experimental_viz/: sweep_analysis.py
figures_pareto/: FIGURE_STYLE.md  README.md  add_partial_forget_to_cache.py  aggregated_cache.json  aggregated_cache_hackable.json  countdown_arms_scatter.py  countdown_figure1.py  dump_aggregated.py  dump_monitored_cache.py  fseval_data.py  hf100_arms_scatter.py  hf100_arms_scatter_v2.py  hf50_arms_scatter.py  monitored_cache.json  proto_7envs_sidebyside.py  proto_env_panel_v1.py  proto_figure1_partial_forget.py  proto_figure1_partial_forget_no_topic.py  proto_figure1_partial_forget_radam.py  proto_figure1_v1.py  proto_figure1_v2.py  proto_figure1_v3.py  proto_pareto_7envs.py  proto_pareto_7envs_aggregate.py  proto_pareto_7envs_curves.py  proto_pareto_7envs_v2.py  proto_pareto_7envs_v2_hackable.py  proto_pareto_7envs_v3_coh32.py  proto_pareto_7envs_v4.py  proto_pareto_appendix.py  proto_pareto_appendix_hfrcl.py  proto_pareto_data.py  proto_pareto_layout.py  proto_pareto_monitored_graft_canon.py  proto_pareto_monitored_graft_port.py  proto_pareto_monitored_partial_forget.py  proto_pareto_monitored_partial_forget_radam.py  proto_pareto_monitored_v1.py  proto_pareto_monitored_v2.py  proto_pareto_style_v2.py  (+11 more)
judge_bench/: probe_latency.py  run_bench.py
legacy_configs/: array-conditional-reward-penalty.py  array-conditional-verified-vary-m-uh.py  baseline_personaqa.py  basic_coherence_sweep.py  binary_dynamics_5seeds.py  binary_dynamics_persona_1000.py  binary_dynamics_persona_1000_graddiag.py  binary_persona_rp_1000.py  canonical_topups_4envs.py  graft_smoke.py  (+44 more)
(+786 files in other folders)
