[project]
name = "small-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "trl>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "requests>=2.32.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
