[project]
name = "small-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "trl>=0.29.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "requests>=2.32.0",
    "openai[aiohttp]>=1.80",
    "python-dotenv>=1.0.0",
    "wandb>=0.25.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "pillow>=12.1.1",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "plotly>=6.5.2",
    "pydantic>=2",
    "liger-kernel>=0.7.0",
    "ninja>=1.11",
    "vllm==0.17.0",
    "flash-attn",
    "flash-attn-3",
    # --- imported from rl-rewardhacking-private ---
    "orjson>=3.11.1",
    "dill>=0.3.8",
    "jinja2>=3.1.6",
    "omegaconf>=2.3.0",
    "nltk>=3.9.2",
    "anthropic>=0.75.0",
    "litellm[proxy]>=1.74.8",
    "numpy",
    "tqdm",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "fire>=0.7.1",
    "colorama>=0.4.6",
    "typing-extensions>=4.14.1",
    "backoff>=2.2.1",
    "seaborn>=0.13.2",
    "kaleido>=1.1.0",
    "pathos>=0.3.2",
    "rollouts>=0.1.5",
    "emoji>=2.15.0",
    "syllapy>=0.7.2",
    "langdetect>=1.0.9",
    "immutabledict>=4.2.2",
    "hf-transfer>=0.1.9",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "nbformat>=4.2.0",
    "jupyterlab>=4.4.5",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "optuna>=4.4.0",
    "scikit-learn>=1.7.1",
    "lightgbm>=4.6.0",
    "dotenv>=0.9.9",
    "debugpy>=1.8.17",
    "vastai>=0.2.8",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.10-cp311-cp311-linux_x86_64.whl" }
flash-attn-3 = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.8.1/flash_attn_3-3.0.0+cu128torch2.10gite2743ab-cp39-abi3-linux_x86_64.whl" }

[tool.uv]
# vllm 0.17.0 declares upper bounds on torch/transformers that exclude our versions.
# In practice these work fine together — override the declared constraints.
override-dependencies = [
    "torch==2.10.0",
    "transformers==5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    # --- imported from rl-rewardhacking-private dev group ---
    "triton>=3.3.1",
    "codetiming>=1.4.0",
    "hydra-core>=1.3.2",
    "latex2sympy2-extended>=1.10.2",
    "math-verify>=0.8.0",
    "pre-commit>=4.4.0",
    "pyarrow>=19.0.0",
    "pybind11>=3.0.1",
    "pylatexenc>=2.10",
    "ray[default]>=2.51.0",
    "tensorboard>=2.20.0",
    "tensordict>=0.8.0,!=0.9.0,<=0.10.0",
    "torchdata>=0.11.0",
    "bitsandbytes>=0.48.1",
    "nvidia-ml-py>=13.580.82",
]
eval = [
    "bert-score>=0.3.13",
]
data = [
    "gdown>=5.2.0",
    "datasketch>=1.6.0",
]
