[project]
name = "small-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "trl>=0.29.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "requests>=2.32.0",
    "openai[aiohttp]>=1.80",
    "python-dotenv>=1.0.0",
    "wandb>=0.25.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "pillow>=12.1.1",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "plotly>=6.5.2",
    "pydantic>=2",
    "liger-kernel>=0.7.0",
    "ninja>=1.11",
    "vllm==0.17.0",
    "flash-attn",
    "flash-attn-3",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.10-cp311-cp311-linux_x86_64.whl" }
flash-attn-3 = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.8.1/flash_attn_3-3.0.0+cu128torch2.10gite2743ab-cp39-abi3-linux_x86_64.whl" }

[tool.uv]
# vllm 0.17.0 declares upper bounds on torch/transformers that exclude our versions.
# In practice these work fine together — override the declared constraints.
override-dependencies = [
    "torch==2.10.0",
    "transformers==5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
